Make runtime.onInstalled work for Service Worker based extensions.

runtime.onInstalled depends on Dispatch*WithLazyListener. For
Service Workers, this wouldn't dispatch the event as the event
listener doens't exist. For event pages, this works as we
manually add a listener before calling Dispatch. This CL does
the same for service worker based extensions.

Bug: 888798
Change-Id: I75dddc32613862464ba2bb73fd972ec1b0d2b03a
Reviewed-on: https://chromium-review.googlesource.com/1247190
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595679}
Former-commit-id: bf08f95f54248eeb99a3af98b20816f3fde1f810